dnl Process this file with autoconf to produce a configure script.

AC_INIT(libopensmssa, 0.0.1, linux-rdma@vger.kernel.org)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE

dnl Checks for programs
AC_PROG_CC
AC_PROG_LIBTOOL

dnl OpenSM headers are in $includedir/infiniband
INC_TMP1="`eval echo ${includedir}/infiniband`"
INC_TMP2="`echo $INC_TMP1 | sed 's/^NONE/$ac_default_prefix/'`"
CFLAGS="$CFLAGS -I`eval echo $INC_TMP2`"
CPPFLAGS="$CPPFLAGS -I`eval echo $INC_TMP2`"

dnl Check for opensm compatibility header
AC_CHECK_HEADER([opensm/osm_event_plugin.h], , 
	AC_MSG_ERROR([opensm/osm_event_plugin.h not found.  libopensmssa requires opensm with event plugin support.]))


dnl the library version
libopensmssa_api_version=1:1:0
AC_SUBST(libopensmssa_api_version)

dnl We use --version-script with ld if possible
AC_CACHE_CHECK(whether ld accepts --version-script, ac_cv_version_script,
    if test -n "`$LD --help < /dev/null 2>/dev/null | grep version-script`"; then
        ac_cv_version_script=yes
    else
        ac_cv_version_script=no
    fi)

AM_CONDITIONAL(HAVE_LD_VERSION_SCRIPT, test "$ac_cv_version_script" = "yes")

# we have to revive the env CFLAGS as some how they are being overwritten...
# see http://sources.redhat.com/automake/automake.html#Flag-Variables-Ordering
# for why they should NEVER be modified by the configure to allow for user
# overrides.
CFLAGS=$ac_env_CFLAGS_value

dnl Make appropriate substitution for sysconfdir for use in scripts
dnl Must expand nested unquoting
CONFFILEPREFIX_TMP1="`eval echo ${sysconfdir}`"
CONFFILEPREFIX_TMP2="`echo $CONFFILEPREFIX_TMP1 | sed 's/^NONE/$ac_default_prefix/'`"
CONFFILEPREFIX="`eval echo $CONFFILEPREFIX_TMP2`"
AC_SUBST(CONFFILEPREFIX)

AC_CONFIG_FILES([Makefile libopensmssa.spec])
AC_OUTPUT
